# dope

./: .gitignore  .pylintrc  DOPE.sublime-project  README.md  lint.py  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  requirements.txt  run-pylint
.obsidian/: hotkeys.json
.obsidian/snippets/: main.css
docs/: explanations.md  how-to-guides.md  references.md  tutorials.md
dope/: DOPE.md  __about__.py  __init__.py  config.py  conftest.py  hyper_link.py  markdown_link.py  mmedia_tools.py  paths.py  task.py  term.py  v_note.py  wiki_link.py
dope/dope_cli/: __init__.py  check_list.py  config.py  edu_tracker.py  parse_args.py  pomodoro.py  rover_sync.py  task_tracker.py  vault_utils.py  vector.py
dope/one-off/: one_off_00_fix_note_name.py  one_off_01_remove_broken_links.py
dope/tests/: __init__.py  common.py  test_v_files.py  test_v_links.py  test_v_notes.py  test_v_settings.py
joplin/: README.md  common.py  conftest.py  jsnapshot.py
joplin/expl/: common.sh  expl_03  expl_db_folders.sh  expl_db_tags.sh  expl_resources.sh  expl_tags.py
joplin/jcli/: README.md  jcli-install  jcli.py  jcli_common.py  jcli_helpers.py  jcli_parse_args.py  jcli_resources.py  jcli_start.py  jcli_tasks.py  jcli_tasks_sanity.py  jtask.py
joplin/snapshots/: .gitignore
joplin/tests/: test_db.py  test_gtd.py  test_notebooks.py  test_notes.py  test_resources.py  test_tags.py
obsidian/: make-obs-link.sh
