# I followed this tutorial
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# for creating the package.

[project]
name = "dope"
description = "Collection of tests and a CLI tool for my Joplin database and Obsidian vaults. Task tracker."
readme = "README.md"
dynamic = [
	"version",
]
authors = [
	{name="ppbrs", email="prishchepenko.boris@gmail.com"},
]
requires-python = ">=3.10"

# For a complete list of classifiers, see https://pypi.org/classifiers/.
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.scripts]
d = "dope:dope_cli"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dope/__about__.py"

[project.urls]
"Homepage" = "https://github.com/ppbrs/dope"
"Bug Tracker" = "https://github.com/ppbrs/dope/issues"
